<resources>
    <string name="app_name">Olive Green</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Splash_Screen_Text">JOIN DEFENCE FORCES</string>
    <string name="contact_details">Olive Greens Training Institute, \nLohia International School, \nNear BSNL Exchange Opposite Kalagram, \nManimajra, Chandigarh 160010 \nIndia</string>
    <string name="about_us_details">Olive Greens is a multifaceted Institute, which is earnestly committed towards promoting individual and organizational competence for HR development through a scientific process of intellectual, emotional and social skills enhancement.The spectrum of our activities spans Personality and Aptitude Assessment, Leadership and Team Building and Soft Skills Development. \n\nThe need to build up and sustain a robust and effective corporate leadership cannot be over emphasized. A series of interventions based on self evaluation, team dynamics and intra-group activities have been evolved by us, which are conducted as a scientifically designed training process to build strong interpersonal relationships and assists in managing stress in the dynamic corporate environment.\n\nWe specialize in SSB Coaching, SSB Preparation, SSB Interview Coaching, SSB Training, SSB Recruitment, Preparation for NDA Written Exam, NDA Written Coaching, Preparation for CDS Written Exam, CDS Written Coaching Corporate Training, Soft Skills Development Programmes, Preparation for SSB interviews, Security Training, Aptitude Testing and Counselling, Assessment Center and Competency Mapping..The mainstay of the Institute, is its specialized and result oriented preparation for NDA/CDS written exam, and SSB Coaching, i.e. \‘Two Stage Selection System\' currently in vogue at the Selection Centres. The training at OG follows the systematic approach of training, evaluation and personalized feedback.</string>
    <string name="olive_green_iso_txt">The only 9001-2008 ISO Certified SSB Training Institute in India</string>
    <string name="img_logo_description">This is iDroidIndia.com Logo</string>
    <string name="contact_form">Quick Query Form</string>
    <string name="your_name">Enter Your Name   :</string>
    <string name="your_mobile_no">Enter Your Mobile :</string>
	<string name="your_query">Enter Your Query  :</string>
	<string name="submit">Submit</string>
	<string name="about_og">About Olive Greens</string>
	<string name="exit_title">Attention..........</string>
	<string name="exit_content">Do you really want to exit ?</string>
	<string name="mobile_number_1">09316016788</string>
	<string name="mobile_number_2">09915898344</string>
	<string name="mobile_number_3">09316529717</string>
	<string name="mobile_number_4">09465176427</string>
	<string name="name_for_mobile_number_1">Col Ashokan: </string>
	<string name="name_for_mobile_number_2">Col Chahal: </string>
	<string name="name_for_mobile_number_3">Col Gadhok: </string>
	<string name="name_for_mobile_number_4">Ris Maj (Hony Lt) Vijay Kumar:</string>
	 <string-array name="ssb_title_list">	 
        <item>Service Selection Board</item>
          <item>SSB Coaching at Olive Greens</item>
            <item>SSB Coatching Fees</item>
              <item>SSB Success Stories</item>  
                <item>GTO Training Ground</item>    
                 <item>Coast Guard PSB</item>
                   <item>Pilot Aptitude Battery Test</item>
                    <item>Joining Instructions</item>                       
      </string-array>
	<string-array name="written_exams_title_list">	 
        <item>NDA Written Exam Coaching</item>
         <item>CDS/OTA Written Coaching</item>
          <item>AFCAT Written Exam Coaching</item>   
           <item>ACC Written Exam Coaching</item>
            <item>Written Exam Coaching Fee</item>
             <item>CPF Exam Coaching</item>             
              <item>Women Special Entry Scheme (WSES)</item>            
      </string-array>
     <string-array name="faculty_names">	 
        <item>Col R S Gadhok</item>
         <item>Col Ashokan K</item>
          <item>Col DJS Chahal</item>   
           <item>Mrs Nanu Singh</item>
             <item>Mrs Ravneet Chahal</item>
              <item>Maj Surinder kumar(Retd)</item>
               <item>Col KJ Singh</item>             
                <item>Brig KD Singh</item>
                 <item>Wg Cdr HS Kang</item>            
      </string-array>
      <string-array name="faculty_email_links">	 
        <item>rs@olivegreens.in</item>
         <item>ashokan@olivegreens.in</item>
          <item>dj@olivegreens.in</item>   
           <item>nanu@olivegreens.in</item>
            <item>info@olivegreens.in</item>
            <item>info@olivegreens.in</item>
             <item>info@olivegreens.in</item>             
              <item>info@olivegreens.in</item>
                <item>info@olivegreens.in</item>            
      </string-array>
	  <string-array name="faculty_phone_numbers">	 
        <item>09316529717</item>
         <item>09316016788</item>
          <item>09915898344</item>   
           <item>09357249717</item>
            <item>09316529717</item>
            <item>09316529717</item>
             <item>09316529717</item>             
              <item>09316529717</item>
                <item>09316529717</item>            
      </string-array>
	  <string-array name="faculty_fb_links">	 
        <item>https://www.facebook.com/groups/ssb1forall/</item>
         <item>https://www.facebook.com/ashok.og</item>
          <item>https://www.facebook.com/djsc45cav</item>   
           <item>https://www.facebook.com/olivegreensacademy</item>
            <item>https://www.facebook.com/olivegreensacademy</item>
            <item>https://www.facebook.com/olivegreensacademy</item>
             <item>https://www.facebook.com/olivegreensacademy</item>             
              <item>https://www.facebook.com/olivegreensacademy</item>
                <item>https://www.facebook.com/olivegreensacademy</item>            
      </string-array>
      <string name="ssb_joining_instructions">
                   
         Joining Instructions \n\n               
	       * Contact the Olive Greens Office at these numbers 9316529717, 9316016788, 9915898344, 9357249717 \n   	
	       * Fresh Batches start  every Monday through out the year. \n
	       * Candidates to report at 0900h at the Institute on Mondays for admission. \n
	       * Candidates desirous of availing hostel facilities are welcome to report to hostel on Sunday,previous to the admission day. \n\n
	       
         Items to be carried \n\n
			
			* Two Passport sized Photographs \n
			* Out Door Dress (two sets). (WHITE shorts/ track suit (for girls), white tee shirt with collars, white sports shoes and white socks). \n
			* Formal Dress (one set). Dark trousers, light coloured plain full sleeves shirt with tie/scarf and leather shoes with laces. In winters blazer/ V necked pull over.\n Girls may be appropriately dressed in formals as above, however, they may wear a decent salwar kurtas. \n
			* Casuals for regular classes. Chappels will not be permitted to be worn by candidates. \n 
		</string>
	<string-array name="faculty_describtion">	 
        <item>Trainer and Facilitator PGDM (Symbiosis), HDIT, PGD (Env &amp; Eco) Ex Member Services Selection Board. \n\n(Trained at Defence Institute of Psychological Research, DRDO in Psychology with special focus on Competency based Evaluation Interviews) Held numerous training and motivational programmes on Leadership and Team Building for over 30 years.</item>
         <item>Trainer and Facilitator M Com, Dip Adv Wks Study, Ex Member Services Selection Board. \n\n(Trained at Defence Institute of Psychological Research, DRDO in Psychology with special focus on Competency based Evaluation through Group Dynamics) Held numerous training and motivational programmes on Leadership and Team Building for over 20 years. He is former Mr. Kerala and an accomplished health fitness trainer.</item>
          <item>Colonel DJS Chahal served in the Indian Army for 25 years and commanded an armoured regiment. \n\nHe was posted as GTO at SSB, Allahabad for 4 years after training at the Defence Institute of Psychological Research (MOD). He has been training candidates for group dynamics for the last 10 years as the Director of Olive Greens Institute. He specializes in memory management, EQ and SQ. </item>   
           <item>MSc Industrial Psychology. PG Diploma in Psychometric Testing and Measurement Techniques. \n\nCertified to conduct Assessment &amp; Development Centre for Competency Based Management. An alumnus of Punjab University, Chandigarh. Ex Captain of National Women\'s Cricket Team and was publically adjudged and honoured as a best teacher.</item>
            <item>MA, MPhil in Geography, BEd. An alumnus of Punjab University, Chandigarh. who is a qualified trainer and facilitator for social studies. \n\nConducts Personality Development and General Awareness programmes. Part of our team responsible for the preparation of NDA/CDSE written. Has held numerous counseling programmes for students, teachers and corporates. She has been involved in welfare programmes and event management within and outside the Armed Forces.</item>
            <item>He is a PGD(Labour law),PGD(Personnel Management) and PGD(Safety,Security and Work Study). \n\nHe has vast experience in psycho profiling and imparting training to SSB candidates. He is an expert on personality development and behavior science.</item>
             <item>BA, LLB, Masters Diploma in Business Administration, PG Diploma in Personal Mgmt &amp; Industrial Relations , Qualified Human Capital Developer (HR Trainer).with over 36 years experience in Indian Army. \n\nHe had been a Senior Faculty member with ITFT Chandigarh.</item>             
              <item>Brig KD Singh, BE(Telecom), MBA a Signals officer, who has served in the Army for 36 years. He is a trained psychologist from the DIPR and served as an effective psychologist in 34 SSB, Allahabad for 4 years. \n\nLater he served as a Call Up officer in Selection Centre, Bhopal for one year. He is also an experienced interviewing Officer who has a clear understanding of the nuances of the selection process.</item>
                <item>Wg Cdr HS Kang, is an experienced fighter pilot and a war veteran. He has been an experienced flying instructor, with instructional tenures at Air Force Academy, Flying Instructor\'s School, College of Air Warfare at Secunderabad and even in civil aviation.\n\nBesides, he did an instructional tenure in Iraq during 1982-84. After taking retirement from IAF, he joined Civil Aviation. He flew Boeing 737 aircraft logging approx 15000 hrs. Presently, he is engaged as trainer on PABT with Olive Greens.</item>            
      </string-array>
</resources>