<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
    <LinearLayout 
        android:id="@+id/ll_map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"        
        android:padding="5dp">
    
    <WebView
        android:id="@+id/wv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
      <LinearLayout 
        android:id="@+id/ll_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
     <LinearLayout 
        android:id="@+id/ll_map_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"        
        android:gravity="center" 
        android:padding="5dp">

         <ScrollView
             android:id="@+id/sv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" >
             </LinearLayout>
         </ScrollView>


     <TextView
	   	android:id="@+id/tv_contact"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/contact_details" 
	    android:textSize="20sp"
	    android:textStyle="italic"	
	    android:textColor="#FFFFFF"           
	    android:layout_weight="1"/>
     
     </LinearLayout>
     		
     <LinearLayout 
        android:id="@+id/ll_mobile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"        
        android:gravity="center" >

     		<TextView
     		    android:id="@+id/tv_mobile"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:text="Mobile Nos: "
     		    android:textSize="20sp"
		        android:textStyle="italic|bold"
     		    android:padding="5dp"
     		    android:textColor="#FFFFFF" />

     		
     	</LinearLayout>

     	<LinearLayout
     	    android:id="@+id/ll_mobile_number_txt_num"
     	    android:layout_width="match_parent"
     	    android:layout_height="match_parent"
     	    android:gravity="center"
     	    android:orientation="horizontal"
     	    android:layout_weight="3" >
     
     	<LinearLayout 
	        android:id="@+id/ll_mobile_number_txt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:gravity="bottom"
	        android:layout_weight="1">     	   
	     	
     		<TextView
     		    android:id="@+id/tv_txt_number_1"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
		        android:textStyle="italic"
		        android:gravity="center"
		        android:padding="5dp"	 
		        android:textColor="#FFFFFF"       
     		    android:text="@string/name_for_mobile_number_1" />
     		
     		<TextView
     		    android:id="@+id/tv_txt_number_2"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
     		    android:gravity="center"		        	  
		        android:textStyle="italic"
		        android:padding="5dp"
		        android:textColor="#FFFFFF"
     		    android:text="@string/name_for_mobile_number_2" />
     		<TextView
     		    android:id="@+id/tv_txt_number_3"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
     		    android:gravity="center"		             		  
		        android:textStyle="italic"
		        android:padding="5dp"
		        android:textColor="#FFFFFF"
     		    android:text="@string/name_for_mobile_number_3" />
     	 
    </LinearLayout>
    
     	
    <LinearLayout 
	        android:id="@+id/ll_mobile_number"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:gravity="center"
	        android:layout_weight="1"> 	
	        
     		<TextView
     		    android:id="@+id/tv_number_1"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
		        android:textStyle="italic"
		        android:gravity="top"	
		        android:padding="5dp"	 
		        android:textColor="#FFFFFF"       
     		    android:text="@string/mobile_number_1" />
     		
     		<TextView
     		    android:id="@+id/tv_number_2"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
     		    android:gravity="top"		        	  
		        android:textStyle="italic"
		        android:padding="5dp"
		        android:textColor="#FFFFFF"
     		    android:text="@string/mobile_number_2" />
     		<TextView
     		    android:id="@+id/tv_number_3"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
     		    android:gravity="top"		             		  
		        android:textStyle="italic"
		        android:padding="5dp"
		        android:textColor="#FFFFFF"
     		    android:text="@string/mobile_number_3" />
     	
	    </LinearLayout> 	
	    
    </LinearLayout> 	
	
 		<LinearLayout
     	    android:id="@+id/ll_mobile_number_txt_num_last"
     	    android:layout_width="match_parent"
     	    android:layout_height="match_parent"
     	    android:gravity="center"
     	    android:orientation="horizontal" 
     	    android:layout_weight="7">
     
     	<LinearLayout 
	        android:id="@+id/ll_mobile_number_txt_last"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:gravity="bottom"
	        android:layout_weight="1">
     	    
     	
	     	
     		<TextView
     		    android:id="@+id/tv_txt_number_4"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
		        android:textStyle="italic"
		        android:gravity="center"
		        android:padding="5dp"	
		        android:textColor="#FFFFFF"        
     		    android:text="@string/name_for_mobile_number_4" />	   
     		    
     		</LinearLayout>
    
     	
     	<LinearLayout 
	        android:id="@+id/ll_mobile_number_last"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:gravity="center"
	        android:layout_weight="1"> 	
	        
     		<TextView
     		    android:id="@+id/tv_number_4"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    android:textSize="20sp"
		        android:textStyle="italic"
		        android:gravity="top"	
		        android:padding="5dp"	  
		        android:textColor="#FFFFFF"      
     		    android:text="@string/mobile_number_4" />
     		
     		</LinearLayout>
    
    	</LinearLayout>
    	
 		</LinearLayout>
    </ScrollView>
</LinearLayout>
